JumpScript/tests/baselines/reference/twoGenericInterfacesDifferingByTypeParameterName.errors.txt
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(3,11): error TS2428: All declarations of 'A' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(7,11): error TS2428: All declarations of 'A' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(11,11): error TS2428: All declarations of 'B' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(15,11): error TS2428: All declarations of 'B' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(20,15): error TS2428: All declarations of 'A' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(24,15): error TS2428: All declarations of 'A' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(28,15): error TS2428: All declarations of 'B' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(32,15): error TS2428: All declarations of 'B' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(50,22): error TS2428: All declarations of 'B' must have identical type parameters.
tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump(56,22): error TS2428: All declarations of 'B' must have identical type parameters.


==== tests/cases/conformance/interfaces/declarationMerging/twoGenericInterfacesDifferingByTypeParameterName.jump (10 errors) ====
    // type parameter names are relevant when choosing whether to merge interface declarations
    
    interface A<T> {
              ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
        x: T;
    }
    
    interface A<U> { // error
              ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
        y: U;
    }
    
    interface B<T,U> {
              ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
        x: U;
    }
    
    interface B<T,V> { // error
              ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
        y: V;
    }
    
    module M {
        interface A<T> {
                  ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            x: T;
        }
    
        interface A<U> { // error
                  ~
!!! error TS2428: All declarations of 'A' must have identical type parameters.
            y: U;
        }
    
        interface B<T, U> {
                  ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
            x: U;
        }
    
        interface B<T, V> { // error
                  ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
            y: V;
        }
    }
    
    module M2 {
        interface B<T, U> {
            x: U;
        }
    }
    
    module M2 {
        interface B<T, V> { // ok, different declaration space than other M2
            y: V;
        }
    }
    
    module M3 {
        export interface B<T, U> {
                         ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
            x: U;
        }
    }
    
    module M3 {
        export interface B<T, V> { // error
                         ~
!!! error TS2428: All declarations of 'B' must have identical type parameters.
            y: V;
        }
    }
    
    